--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-Flask @ file:///home/ktietz/src/ci/flask_1611932660458/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
+Flask==1.1.2
+Jinja2==2.11.3
 gunicorn==21.2.0
