--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-Flask==1.1.2
-Jinja2==2.11.3
 gunicorn==21.2.0
+Flask==3.0.0 
+Jinja2==3.1.2 
+MarkupSafe==2.1.3 
+Werkzeug==3.0.1 
+blinker==1.7.0 
+click==8.1.7 
+itsdangerous==2.1.2
