--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,11 @@ itsdangerous==2.1.2
 flask-talisman==1.1.0
 flask-wtf==1.2.1 
 wtforms==3.1.2
-# jinjaMarkdown==0.0.8
 
+jinjaMarkdown==0.0.8
+mistune==0.8.4
+markdown==3.3.4
+argparse==1.4.0
  
 # Probably don't need the below
 # Require dependencies for watchdog
